--- a/src/app/core/components/shop-cart/shop-cart.component.html
+++ b/src/app/core/components/shop-cart/shop-cart.component.html
@@ -31,12 +31,11 @@
           <div class="table-responsive bg-white shadow">
             <table  class="table table-center table-padding mb-0" >
               <thead>
-                <tr >
-                  <th class="border-bottom py-3" style="min-width:20px "></th>
-                  <th class="border-bottom py-3" style="min-width: 300px;" style="font-family: 'PPEiko-Medium' !important;" >Product</th>
-                  <th class="border-bottom text-center py-3" style="min-width: 160px;">Price</th>
-                  <th class="border-bottom text-center py-3" style="min-width: 160px;">Qty</th>
-                  <th class="border-bottom text-center py-3" style="min-width: 160px;">Total</th>
+                <tr  >
+                  
+                  <th class="border-bottom py-3" style="min-width: 300px;" style="font-family: 'PPEiko-Medium' !important;" >PRODUCT</th>
+                  <th class="border-bottom text-center py-3" style="min-width: 160px;">QUANTITY</th>
+                  <th class="border-bottom text-center py-3" style="min-width: 160px;">TOTAL</th>
                 </tr>
               </thead>
   
@@ -45,13 +44,19 @@
                 
                   <td>
                     <div class="d-flex align-items-center">
-                      <img src="assets/images/shop/product/s1.jpg" class="img-fluid avatar avatar-small rounded shadow"
-                        style="height:auto;" alt="">
-                      <h6 class="mb-0 ms-3" style="font-family: 'PPEiko-Medium' !important;">T-Shirt</h6>
+                      <img src="assets/images/shop/product/s1.jpg" width="150" height="150" >
+                     
+                      
+                      <div class="margin">
+                        <h6 class=" mb-0 ms-3" style="font-family: 'PPEiko-Medium' !important;">T-Shirt</h6>
+                        <h6 class=" mb-0 ms-3" style="font-family: 'PPEiko-Thin' !important;">Información</h6>
+                        <h6 class=" mb-0 ms-3" style="font-family: 'PPEiko-Thin' !important;">$78</h6>
+                      </div>
                     </div>
+                 
                   </td>
-                  <td class="text-center">$ 255.00</td>
-                  <td class="text-center qty-icons">
+                  
+                  <td class="text-center qty-icons" >
                     <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
                       class="btn btn-icon btn-soft-primary minus">-</button>
                     <input min="0" name="quantity" value="7" type="number"
@@ -61,66 +66,33 @@
                   </td>
                   <td class="text-center fw-bold">$510.00</td>
                 </tr>
-  
-                <tr class="shop-list">
+                <tr class="shop-list" >
+                
                   <td>
                     <div class="d-flex align-items-center">
-                      <img src="assets/images/shop/product/s3.jpg" class="img-fluid avatar avatar-small rounded shadow"
-                        style="height:auto;" alt="">
-                      <h6 class="mb-0 ms-3" style="font-family: 'PPEiko-Medium' !important;">Branded Watch</h6>
+                      <img src="assets/images/shop/product/s1.jpg" width="150" height="150" >
+                     
+                      
+                      <div class="margin">
+                        <h6 class=" mb-0 ms-3" style="font-family: 'PPEiko-Medium' !important;">T-Shirt</h6>
+                        <h6 class=" mb-0 ms-3" style="font-family: 'PPEiko-Thin' !important;">Información</h6>
+                        <h6 class=" mb-0 ms-3" style="font-family: 'PPEiko-Thin' !important;">$78</h6>
+                      </div>
                     </div>
+                 
                   </td>
-                  <td class="text-center">$ 520.00</td>
-                  <td class="text-center qty-icons">
+                  
+                  <td class="text-center qty-icons" >
                     <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
                       class="btn btn-icon btn-soft-primary minus">-</button>
-                    <input min="0" name="quantity" value="1" type="number"
+                    <input min="0" name="quantity" value="7" type="number"
                       class="btn btn-icon btn-soft-primary qty-btn quantity m-1">
                     <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
                       class="btn btn-icon btn-soft-primary plus">+</button>
                   </td>
-                  <td class="text-center fw-bold">$520.00</td>
+                  <td class="text-center fw-bold">$510.00</td>
                 </tr>
-  
-                <tr class="shop-list">
-                  <td>
-                    <div class="d-flex align-items-center">
-                      <img src="assets/images/shop/product/s6.jpg" class="img-fluid avatar avatar-small rounded shadow"
-                        style="height:auto;" alt="">
-                      <h6 class="mb-0 ms-3"  style="font-family: 'PPEiko-Medium' !important;">T-Shirt</h6>
-                    </div>
-                  </td>
-                  <td class="text-center">$ 160.00</td>
-                  <td class="text-center qty-icons">
-                    <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                      class="btn btn-icon btn-soft-primary minus">-</button>
-                    <input min="0" name="quantity" value="2" type="number"
-                      class="btn btn-icon btn-soft-primary qty-btn quantity m-1">
-                    <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                      class="btn btn-icon btn-soft-primary plus">+</button>
-                  </td>
-                  <td class="text-center fw-bold">$640.00</td>
-                </tr>
-  
-                <tr class="shop-list">
-                  <td>
-                    <div class="d-flex align-items-center">
-                      <img src="assets/images/shop/product/s10.jpg" class="img-fluid avatar avatar-small rounded shadow"
-                        style="height:auto;" alt="">
-                      <h6 class="mb-0 ms-3"  style="font-family: 'PPEiko-Medium' !important;">Sunglasses</h6>
-                    </div>
-                  </td>
-                  <td class="text-center">$ 260.00</td>
-                  <td class="text-center qty-icons">
-                    <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                      class="btn btn-icon btn-soft-primary minus">-</button>
-                    <input min="0" name="quantity" value="2" type="number"
-                      class="btn btn-icon btn-soft-primary qty-btn quantity m-1">
-                    <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                      class="btn btn-icon btn-soft-primary plus">+</button>
-                  </td>
-                  <td class="text-center fw-bold">$520.00</td>
-                </tr>
+
               </tbody>
             </table>
           </div>
@@ -129,22 +101,12 @@
       </div>
       <!--end row-->
       <div class="row">
-        <div class="col-lg-8 col-md-6 mt-4 pt-2">
-          <a href="javascript:void(0)" class="btn btn-primary">Shop More</a>
-          <a href="javascript:void(0)" class="btn btn-soft-primary ms-2">Update Cart</a>
-        </div>
+      
         <div class="col-lg-4 col-md-6 ms-auto mt-4 pt-2">
           <div class="table-responsive bg-white rounded shadow">
             <table class="table table-center table-padding mb-0">
               <tbody>
-                <tr>
-                  <td class="h6" style="font-family: 'PPEiko-Medium' !important;">Subtotal</td>
-                  <td class="text-center fw-bold">$ 2190</td>
-                </tr>
-                <tr>
-                  <td class="h6"  style="font-family: 'PPEiko-Medium' !important;">Taxes</td>
-                  <td class="text-center fw-bold">$ 219</td>
-                </tr>
+              
                 <tr class="bg-light">
                   <td class="h6"  style="font-family: 'PPEiko-Medium' !important;">Total</td>
                   <td class="text-center fw-bold">$ 2409</td>
@@ -153,7 +115,8 @@
             </table>
           </div>
           <div class="mt-4 pt-2 text-end">
-            <a routerLink="/shop-checkouts" class="btn btn-primary">Proceed to checkout</a>
+         
+            <a class="botones" routerLink="/shop-checkouts" style= "color: black;" >Check Out</a>
           </div>
         </div>
         <!--end col-->
