--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -86,6 +86,36 @@
 .productdesign{
     background-color: #2b2d91 ; 
 }
+.botones{
+    text-decoration: none;
+    border: 1px solid #000;
+    border-radius: 20px;
+    padding: 0.5em 1em;
+    text-transform: uppercase;
+    letter-spacing: 0.075em;
+    width: 17em;
+    font-size: 80%;
+    text-align: center;
+    margin: 0.25em 0;
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+        background-image: none;
+        background: transparent;
+        background-color: transparent;
+        color: inherit;
+        outline: none;
+        padding: 0.25em 1em;
+        border: 1px solid #000;
+        text-decoration: none;
+        font-family: inherit;
+        -webkit-transition: all 500ms ease-out;
+        -moz-transition: all 500ms ease-out;
+        -ms-transition: all 500ms ease-out;
+        -o-transition: all 500ms ease-out;
+        transition: all 500ms ease-out;
+    
+}
 .interiordesign{
     background-color: #4aac91 ; 
 }
@@ -167,6 +197,7 @@ top:1px;
     width: 100%!;
     height: 800%;
 }
+
 
   }
   
