--- a/src/app/wishlist/wishlist.component.css
+++ b/src/app/wishlist/wishlist.component.css
@@ -1,11 +1,3 @@
-.quantity{
-border:black 2px solid;
-         margin-left: 50%;
-}
-.margin{
-    padding-left: 20px;
-   
-}
 .botones{
     text-decoration: none;
     border: 1px solid #000;
@@ -35,4 +27,7 @@ border:black 2px solid;
         -o-transition: all 500ms ease-out;
         transition: all 500ms ease-out;
     
+}
+.marginB{
+    margin-top: 100px;
 }
