--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -108,19 +108,20 @@
   
                       <ul class="submenu megamenu " style="background-color: #ffffff;">
                         <div class="cerrar"  id ="cerrart"> <a href ="javascript:cerrar()"> </a> <!--<img src="assets/images/x1.png">--></div>  
-                        <li style="width: 50%;">
+                        <li  style="width: 50%;">
                           <div class="matersant" style=" background-color: #ffffff ">
                           <ul>
                             <li class="casamatersant megamenu-head " style="color: white !important; font-family: 'PPEiko-Medium' !important;" >CASA MATERSANT</li>
-                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/shop-wall">WALL ART</a></li>
+                            <li><a class="nav-link-refnav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/shop-wall">WALL ART</a></li>
                             <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/shop-furniture">FURNITURE</a></li>
                             <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/matersant-decor">HOME DECOR</a></li>
                             <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/matersant-finishing">HOME FINISHINGS</a></li>
                             <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/shop-accesories">CLOTHING + ACCESSORIES</a></li>
                             <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/index-upcycle">NFT</a></li>
                           </ul>
-                        </div>
+                          </div>
                         </li>
+
                         <li style="width: 48%;">
                           <div class="mcurada" style="background-color: #ffffff ">
                           <ul>
@@ -129,7 +130,7 @@
                             <li><a class="nav-link-ref"  style="font-family: 'PPEiko-Medium' !important;" routerLink="/materia-decor"> HOME DECOR</a></li>
                             <li><a class="nav-link-ref"  style="font-family: 'PPEiko-Medium' !important;" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
                           </ul>
-                        </div>
+                          </div>
                         </li>
                       </ul>
                     </li>
@@ -139,7 +140,7 @@
                       <div class="cerrar"  id ="cerrart"> <a href ="javascript:cerrar()"> </a><!--<img src="assets/images/x1.png">--></div>
                       <li  style="width: 33%; border-right: 1px solid rgb(151, 150, 150);">
                         <div class="contenedor3">
-                        <ul>
+                        <ul >
                           <li class="productdesign megamenu-head"  style="color: white !important" >PRODUCT DESIGN</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
                           <li><a class="nav-link-ref" routerLink="">CUSTOM-MAKE YOUR OWN PIECE</a></li>
@@ -162,7 +163,6 @@
                           <li class="art megamenu-head"  style="color: white !important;">ART</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
                           <li><a class="nav-link-ref" routerLink="/custome-made">COMMISION ART</a>
-
                           <li> 
                           </li>
                         </ul>
@@ -174,7 +174,6 @@
                   <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;">ABOUT</a> </li> <span class="menu-arrow"></span> 
                   <ul class="buy-button list-inline mb-0" >
     
-                  
                     <li class="list-inline-item mb-0 pe-1">
                       <a href="javascript:void(0);" class="btn btn-icon btn-soft-primary" (click)="wishListModal(content)"><i
                           class="uil uil-heart align-middle icons"></i></a>
