--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -31,22 +31,24 @@
                       <ul class="submenu megamenu "  style="font-family: 'PPEiko-Medium' !important;">
                         <li>
                           <ul>
-                            <li class="megamenu-head "  style="color: red !important; ">CASA MATERSANT</li>
-                            <li><a class="nav-link-ref" routerLink="/shop-wall">WALL ART</a></li>
-                            <li><a class="nav-link-ref" routerLink="/shop-furniture">FURNITURE</a></li>
-                            <li><a class="nav-link-ref" routerLink="/matersant-decor">HOME DECOR</a></li>
-                            <li><a class="nav-link-ref" routerLink="/matersant-finishing">HOME FINISHINGS</a></li>
-                            <li><a class="nav-link-ref" routerLink="/shop-accesories">CLOTHING + ACCESSORIES</a></li>
-                            <li><a class="nav-link-ref" routerLink="/index-upcycle">UPCYCLED</a></li>
+                            <li class="casamatersant megamenu-head " style="color: white !important; font-family: 'PPEiko-Medium' !important;" >CASA MATERSANT</li>
+                            <li><a class="nav-link-refnav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/shop-wall">WALL ART</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/shop-furniture">FURNITURE</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/matersant-decor">HOME DECOR</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/matersant-finishing">HOME FINISHINGS</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/shop-accesories">CLOTHING + ACCESSORIES</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/index-upcycle">NFT</a></li>
+
+                          
                           </ul>
                         </li>
     
                         <li>
                           <ul>
-                            <li class="megamenu-head"  style="color: #e89f36 !important; font-family: 'PPEiko-Medium' !important;" >MATERIA CURADA</li>
-                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/art-materia">ART</a></li>
-                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/materia-decor"> HOME DECOR</a></li>
-                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
+                            <li class="materiacurada megamenu-head"  style="color: white !important; font-family: 'PPEiko-Medium' !important;" >MATERIA CURADA</li>
+                            <li><a class="nav-link-ref"  style="font-family: 'PPEiko-Medium' !important;" routerLink="/art-materia">ART</a></li>
+                            <li><a class="nav-link-ref"  style="font-family: 'PPEiko-Medium' !important;" routerLink="/materia-decor"> HOME DECOR</a></li>
+                            <li><a class="nav-link-ref"  style="font-family: 'PPEiko-Medium' !important;" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
                           </ul>
                         </li>
     
@@ -58,22 +60,23 @@
                       <ul class="submenu megamenu "  style="font-family: 'PPEiko-Medium' !important;">
                         <li>
                           <ul>
-                            <li class="megamenu-head "  style="color: red !important; ">CASA MATERSANT</li>
-                            <li><a class="nav-link-ref" routerLink="/shop-wall">WALL ART</a></li>
-                            <li><a class="nav-link-ref" routerLink="/shop-furniture">FURNITURE</a></li>
-                            <li><a class="nav-link-ref" routerLink="/matersant-decor">HOME DECOR</a></li>
-                            <li><a class="nav-link-ref" routerLink="/matersant-finishing">HOME FINISHINGS</a></li>
-                            <li><a class="nav-link-ref" routerLink="/shop-accesories">CLOTHING + ACCESSORIES</a></li>
-                            <li><a class="nav-link-ref" routerLink="/index-upcycle">UPCYCLED</a></li>
+                           <li class="productdesign megamenu-head"  style="color: white !important" >PRODUCT DESIGN</li>
+                           <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
+                           <li><a class="nav-link-ref" routerLink="">CUSTOM-MAKE YOUR OWN PIECE</a></li>
                           </ul>
                         </li>
-    
                         <li>
                           <ul>
-                            <li class="megamenu-head"  style="color: #e89f36 !important; font-family: 'PPEiko-Medium' !important;" >MATERIA CURADA</li>
-                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/art-materia">ART</a></li>
-                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/materia-decor"> HOME DECOR</a></li>
-                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
+                            <li class="interiordesign megamenu-head"   style="color: white !important;" >INTERIOR DESIGN</li>
+                            <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
+                            <li><a class="nav-link-ref" routerLink="/portfolio-masonry-three">CREATE YOUR DREAM SPACE</a></li>
+                          </ul>
+                        </li>
+                        <li>
+                          <ul>
+                            <li class="art megamenu-head"  style="color: white !important;">ART</li>
+                            <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
+                            <li><a class="nav-link-ref" routerLink="/custome-made">COMMISION ART</a>
                           </ul>
                         </li>
     
@@ -163,8 +166,6 @@
                           <li class="art megamenu-head"  style="color: white !important;">ART</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
                           <li><a class="nav-link-ref" routerLink="/custome-made">COMMISION ART</a>
-                          <li> 
-                          </li>
                         </ul>
                       </div>
                       </li>
