--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -127,7 +127,7 @@
 
                         <li style="width: 48%;">
                           <div class="mcurada" style="background-color: #ffffff ">
-                          <ul>
+                          <ul class="submenu-dos">
                             <li class="materiacurada megamenu-head"  style="color: white !important; font-family: 'PPEiko-Medium' !important;" >MATERIA CURADA</li>
                             <li><a class="nav-link-ref"  style="font-family: 'PPEiko-Medium' !important;" routerLink="/art-materia">ART</a></li>
                             <li><a class="nav-link-ref"  style="font-family: 'PPEiko-Medium' !important;" routerLink="/materia-decor"> HOME DECOR</a></li>
