--- a/src/app/detail-two/detail-two.component.html
+++ b/src/app/detail-two/detail-two.component.html
@@ -39,7 +39,7 @@
     <section class="marg">
       <div id="grid" class="row">
           <div class="col-lg-9 col-md-6 col-12 mt-4 pt-2 picture-item" data-groups='["branding"]' 
-              *ngFor="let item of filterredImages">
+              *ngFor="let item of filteredImages">
               <div class="card work-container work-modern position-relative overflow-hidden shadow rounded border-0">
                   <div class="card-body p-0">
                       <img  src="{{item.imageURL}}"  class="img-fluid rounded" alt="work-image">
